# obsidian-garden

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/obsidian_garden/: __init__.py  builder.py  cli.py  parser.py  theme.py
tests/: test_builder.py  test_parser.py
